--- a/my-app/src/test.html
+++ b/my-app/src/test.html
@@ -84,8 +84,8 @@ const newUser =users.map(u=> u.id ===updateUserDto.id?{...updateUserDto}:u);
 console.log("newUser " ,newUser);
 
 
-
-
+const result=Array.from({length:5}).map(r=>5)
+console.log("result : " , result);
 
 
    </script> 
